fix: landing image not visible on mobile

--- a/src/styles/Mobile.css
+++ b/src/styles/Mobile.css
@@ -46,10 +46,9 @@
 		object-fit: cover;
 		height: 100%;
 		width: 100%;
-		opacity: 0;
+		/*opacity: 0;*/
 		transition-duration: 1.8s;
 		transition-timing-function: cubic-bezier(.2, 1, .3, 1);
-		transform: translateY(40px);
 		z-index: -1;
 	}
 
